<resources>
    <string name="app_name">InventoryApplication</string>
    <string name="password">Password:</string>
    <string name="submit">Submit</string>
    <string name="register">Register</string>
    <string name="username">Username:</string>

    <string name="notification">Notification</string>
    <string name="inventory_application_notification">Inventory Application Would Like to Send You Notifications</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="Notifications">Notifications</string>

    <string name="value">Value</string>
    <string name="quantity">Quantity</string>
    <string name="unit">Unit</string>
    <string name="location">Location</string>
    <string name="name">Name</string>

    <string name="item_name_header"><u>Item Name</u></string>
    <string name="item_quantity_header"><u>Item Quantity</u></string>
    <string name="item_units_header"><u>Units</u></string>
    <string name="item_value_header"><u>Item Value</u></string>
    <string name="item_location_header"><u>Item Location</u></string>

    <string name="delete">Delete</string>
    <string name="edit">Edit</string>

    <string name="createUsername">New Username:</string>
    <string name="createPassword">New Password:</string>
    <string name="create">Create</string>
    <string name="pref_notif">Notification Preference</string>
    <string name="pref_notif_desc">Enable or disable notifications</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings">settings</string>

</resources>