<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item_name_header"/>

    <EditText
        android:id="@+id/txtItemName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"/>

    <TextView
        android:id="@+id/itemQuantityHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item_quantity_header"/>

    <EditText
        android:id="@+id/txtItemQuantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/quantity"/>

    <TextView
        android:id="@+id/itemUnitsHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item_units_header"/>

    <EditText
        android:id="@+id/txtItemUnits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/unit"/>

    <TextView
        android:id="@+id/itemValueHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item_value_header"/>

    <EditText
        android:id="@+id/txtItemValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/value"/>

    <TextView
        android:id="@+id/itemLocationHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item_location_header"/>

    <EditText
        android:id="@+id/txtItemLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/location"/>



</LinearLayout>