<?xml version="1.0" encoding="utf-8"?>
<!-- Grid Layout for displaying all (from Rubric) Can be deleted-->
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/databaseBackground"
    android:columnCount="6"
    android:padding="6dp">

    <TextView
        android:textColor="@color/white"
        android:background="@color/gridBackground"
        android:text="@string/name"
        android:id="@+id/txtNameHeader"
        android:textSize="12sp"
        android:padding="14dp"/>
    <TextView
        android:textColor="@color/white"
        android:background="@color/gridBackground"
        android:text="@string/quantity"
        android:id="@+id/txtQuantityHeader"
        android:textSize="12sp"
        android:padding="14dp"/>
    <TextView
        android:textColor="@color/white"
        android:background="@color/gridBackground"
        android:text="@string/unit"
        android:id="@+id/txtUnitHeader"
        android:textSize="12sp"
        android:padding="14dp"/>
    <TextView
        android:textColor="@color/white"
        android:background="@color/gridBackground"
        android:text="@string/value"
        android:id="@+id/txtValueHeader"
        android:textSize="12sp"
        android:padding="14dp"/>
    <TextView
        android:textColor="@color/white"
        android:background="@color/gridBackground"
        android:text="@string/location"
        android:id="@+id/txtLocationHeader"
        android:textSize="12sp"
        android:padding="14dp"/>
    <Button
        android:textColor="@color/white"
        android:background="@color/gridBackground"
        android:id="@+id/btnDelete"
        android:text="@string/delete"
        android:textSize="12sp" />

</GridLayout>