 <!-- FIXME: Nest this layout in a relative layout to fit another row of TextViews -->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:padding="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@color/gridBackground"
            android:text="@string/name"
            android:id="@+id/txtNameHeader"
            android:textSize="18sp"
            android:padding="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@color/gridBackground"
            android:text="@string/quantity"
            android:id="@+id/txtQuantityHeader"
            android:textSize="18sp"
            android:padding="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@color/gridBackground"
            android:text="@string/unit"
            android:id="@+id/txtUnitHeader"
            android:textSize="18sp"
            android:padding="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@color/gridBackground"
            android:text="@string/value"
            android:id="@+id/txtValueHeader"
            android:textSize="18sp"
            android:padding="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@color/gridBackground"
            android:text="@string/location"
            android:id="@+id/txtLocationHeader"
            android:textSize="18sp"
            android:padding="10dp"/>
        </LinearLayout>